# OpenViBE-template

./: CMakeLists.txt  README.md
src/: defines.hpp  main.cpp  ovp_defines.h  ovp_main.cpp
src/box-algorithms/: ovpCHelloWorld.cpp  ovpCHelloWorld.h
src/boxes/: CHelloWorld.cpp  CHelloWorld.hpp
test/: CMakeLists.txt  DartTestfile.txt  MyTest-output.csv  MyTest-ref.csv  MyTest-test.xml  test_template.cpp
